version 0.9
  * Init of plugin

version 1.0
  * First working version with supporting mp4 streams

version 1.1
  * Further improvments allowing more file types fo be played

version 1.2
  * Show Thumbernails
  * Show sub/raw icon

version 1.3
  * Fix for when module storage server is not found
  * BugFix when animeavenue format changes to not trigger exception in log
  * Fix Ongoing Anime List

version 1.4
  * Emulate cache module if no StorageServer can be found
  * Be a little bit more descriptive in addon.xml
  * Use addon urlresolver to resolve video pages that do not expose directly the stream url
  * Show sub/raw in latest episodes

version 1.5
  * Code cleanup
  * Fix language ids
  * Detect upcomding episode